--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -21,4 +21,4 @@ RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/
 # [Optional] Uncomment this line to install global node packages.
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
 
-RUN apt-get update && pip3 install numpy pandas sklearn
+RUN apt-get update && pip3 install numpy pandas sklearn xgboost matplotlib
